<resources>
    <string name="app_name">Tower Fox</string>
    <string name="string_back">Back</string>
    <string name="string_next">Next</string>
    <string name="string_title">Title</string>
    <string name="string_server_address_top_description">To begin using this app, please enter the address of the Tower Fox Approval server you wish to synchronize with:</string>
    <string name="example_server_com">example.server.com</string>
    <string name="string_server_address_bottom_description">You should have received this address along with the instructions for downloading and installing this app. If you do not know the correct server address please check with your foreperson or manager.</string>
    <string name="string_server_address">Server Address</string>
    <string name="string_login_top_description">To get starting using Tower Fox you must first login\n\nLogin requires that you have connection to the Internest.</string>
    <string name="please_login">Please Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="rejected_list">Rejected List</string>
    <string name="projects_list">Projects List</string>
    <string name="string_projects">Projects</string>
    <string name="string_rejects">Rejects</string>
    <string name="string_project_id">Project ID</string>
    <string name="string_add_project">Add Project</string>
    <string name="string_cancel">Cancel</string>
    <string name="photos">Photos</string>
    <string name="about_closeout">About Tower Fox</string>
    <string name="string_log">Log</string>
    <string name="string_account">Account</string>
    <string name="logout">Logout</string>
    <string name="change_sync_server">Change Sync Server</string>
    <string name="no_projects_downloaded">No Projects Downloaded</string>
    <string name="no_photos">No Photos</string>
    <string name="there_are_no_photos_in_the_rejected_list">There are no Photos in the Rejected List</string>
    <string name="to_download_a_project_to_your_device_click_the_icon_in_the_menu_bar">To download a project to your device,\nClick the + icon in the menu bar</string>
    <string name="delete">Delete</string>
    <string name="top">Top</string>
    <string name="take_photo">Take Photo</string>
    <string name="photo_rejection_details">Photo Rejection Details</string>
    <string name="captured_image">Captured Image</string>
    <string name="reviewer_comments">Reviewer Comments:</string>
    <string name="reviewer">Reviewer:</string>
    <string name="reviewed_on">Reviewed On:</string>
    <string name="rejection_details">Rejection Details</string>
    <string name="photo_name_required">Photo Name (Required)</string>
    <string name="photo_description_required">Photo Description (Required)</string>
    <string name="need_files_permission">App need to access your camera</string>
    <string name="access_denied">Camera access denined</string>
    <string name="review_your_captured_photo_to_verify_that_it_depicts_the_items_you_described">Review your captured photo to verify that it depicts the items you described</string>
    <string name="captured_photo">Captured Photo</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="save_and_list">Save and List</string>
    <string name="save_and_return">Save and Return</string>
    <string name="title_location_permission">Need access to locations</string>
    <string name="text_location_permission">Need access to location service to upload the photo</string>
    <string name="review_photo">Review Photo</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="add_photo">Add Photo</string>
    <string name="request_support">Request Support</string>
    <string name="can_t_access_your_account">Can\'t access your account?</string>
    <string name="support">Support</string>
    <string name="example_photo">Example Photo</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="permission_pick_rationale">READ_EXTERNAL_STORAGE permission is needed to pick image.</string>
    <string name="permission_crop_rationale">WRITE_EXTERNAL_STORAGE permission is needed to save cropped image.</string>
    <string name="permission_denied">Permission was denied. Please consider granting it in order to use all features.</string>
    <string name="permission_denied_never_ask_again">Permission was denied with never ask again.</string>
</resources>
