<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/btn_left"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="4dp"
        android:paddingEnd="4dp">

        <ImageView
            android:id="@+id/iv_left_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_keyboard_arrow_left_24px"
            android:scaleType="center"
            android:layout_margin="4dp"/>
        <com.foxridge.towerfox.views.CustomFontTextView
            android:id="@+id/tv_left_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_back"
            android:textColor="@color/colorWhite"
            app:font_style="medium"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"/>

    </LinearLayout>
    <com.foxridge.towerfox.views.CustomFontTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_title"
        android:textColor="@color/colorWhite"
        app:font_style="bold"
        android:textSize="18sp"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="140dp"
        android:gravity="center"/>
    <LinearLayout
        android:id="@+id/btn_right"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:paddingStart="4dp"
        android:paddingEnd="4dp">
        <com.foxridge.towerfox.views.CustomFontTextView
            android:id="@+id/tv_right_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_next"
            android:textColor="@color/colorWhite"
            app:font_style="medium"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"/>

        <ImageView
            android:id="@+id/iv_right_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_keyboard_arrow_right_24px"
            android:scaleType="center"
            android:layout_margin="4dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_top"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:visibility="gone">
        <ImageView
            android:id="@+id/iv_top_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_keyboard_arrow_up_24px"
            android:scaleType="center"
            android:layout_margin="4dp"/>

        <com.foxridge.towerfox.views.CustomFontTextView
            android:id="@+id/tv_top_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top"
            android:textColor="@color/colorWhite"
            app:font_style="medium"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_action_bar_shadow"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/action_bar_shadow"/>

</RelativeLayout>