<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorExtraLight"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/detail_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_bar"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/btn_rejection_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_warning"
                android:layout_marginStart="16dp"/>

            <com.foxridge.towerfox.views.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:font_style="regular"
                android:text="@string/review_your_captured_photo_to_verify_that_it_depicts_the_items_you_described"
                android:textColor="@color/colorPrimary"
                android:scrollbarSize="16sp"
                android:layout_margin="8dp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDividerGray"/>

        <com.foxridge.towerfox.views.CustomFontTextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:font_style="medium"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="@color/color_text_dark_gray"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDividerGray"/>

        <com.foxridge.towerfox.views.CustomFontTextView
            android:id="@+id/tv_example_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:font_style="medium"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/captured_photo"
            android:textColor="@color/color_text_dark_gray"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="10dp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_view"
        android:layout_below="@+id/detail_view"
        android:scaleType="fitCenter"
        android:layout_margin="16dp"/>

    <LinearLayout
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <RelativeLayout
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/colorRed">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="8dp"
                android:layout_centerInParent="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    android:src="@drawable/ic_delete"
                    android:layout_gravity="center" />
                <com.foxridge.towerfox.views.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:font_style="medium"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/delete_photo"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/btn_save_continue"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="8dp"
                android:layout_centerInParent="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    android:src="@drawable/ic_arrow_right"
                    android:layout_gravity="center" />
                <com.foxridge.towerfox.views.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:font_style="medium"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/save_and_continue"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/btn_save_return"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/white"
            android:foreground="?attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="8dp"
                android:layout_centerInParent="true">

                <ImageView
                    android:id="@+id/iv_projects_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    android:src="@drawable/ic_list_blue"
                    android:layout_gravity="center" />
                <com.foxridge.towerfox.views.CustomFontTextView
                    android:id="@+id/tv_projects_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:font_style="medium"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/save_and_return"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>


    <include layout="@layout/action_bar_layout"
        android:id="@+id/top_bar"/>
</RelativeLayout>